@@ -4,4 +4,4 @@ auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
 
 title: d command line, no arg (-option)
 
-auto: INTERACT '%SWAKS% --dump DATA --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver --server "ser.ver" -d' 'Data:' 'Date: C%DATE%%NEWLINE%%NEWLINE%C%BODY%'
+auto: INTERACT '%SWAKS% --dump DATA --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver --server "ser.ver" -d' 'Data:' 'Date: C..DATE..%NEWLINE%%NEWLINE%C%BODY%'
