@@ -5,4 +5,4 @@ auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
 title: data, command line, no-option
 
 test action: CMD_CAPTURE %SWAKS% --dump DATA --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver --server "ser.ver" \
-    --data 'Date: C%DATE%%NEWLINE%%NEWLINE%C%BODY%' --no-data
+    --data 'Date: C..DATE..%NEWLINE%%NEWLINE%C%BODY%' --no-data
