@@ -1,6 +1,6 @@
 DATA Info:
   data = <<.
-Message-Id: C<19991103112429.047942@localhost>
+Date: CWed, 03 Nov 1999 11:24:29 -0500
 
 CThis is a test mailing
 
